APIs/ably.net/control/v1/javascript-client/README.md
# api_v1

ApiV1 - JavaScript client for api_v1
No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: v1
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install api_v1 --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your api_v1 from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var ApiV1 = require('api_v1');

var defaultClient = ApiV1.ApiClient.instance;
// Configure Bearer access token for authorization: bearer_auth
var bearer_auth = defaultClient.authentications['bearer_auth'];
bearer_auth.accessToken = "YOUR ACCESS TOKEN"

var api = new ApiV1.AppsApi()
var accountId = "accountId_example"; // {String} 
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.accountsAccountIdAppsGet(accountId, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://control.ably.net/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ApiV1.AppsApi* | [**accountsAccountIdAppsGet**](docs/AppsApi.md#accountsAccountIdAppsGet) | **GET** /accounts/{account_id}/apps | Lists account apps
*ApiV1.AppsApi* | [**accountsAccountIdAppsPost**](docs/AppsApi.md#accountsAccountIdAppsPost) | **POST** /accounts/{account_id}/apps | Creates an app
*ApiV1.AppsApi* | [**appsIdDelete**](docs/AppsApi.md#appsIdDelete) | **DELETE** /apps/{id} | Deletes an app
*ApiV1.AppsApi* | [**appsIdPatch**](docs/AppsApi.md#appsIdPatch) | **PATCH** /apps/{id} | Updates an app
*ApiV1.AppsApi* | [**appsIdPkcs12Post**](docs/AppsApi.md#appsIdPkcs12Post) | **POST** /apps/{id}/pkcs12 | Updates app&#39;s APNS info from a .p12 file
*ApiV1.KeysApi* | [**appsAppIdKeysGet**](docs/KeysApi.md#appsAppIdKeysGet) | **GET** /apps/{app_id}/keys | Lists app keys
*ApiV1.KeysApi* | [**appsAppIdKeysKeyIdPatch**](docs/KeysApi.md#appsAppIdKeysKeyIdPatch) | **PATCH** /apps/{app_id}/keys/{key_id} | Updates a key
*ApiV1.KeysApi* | [**appsAppIdKeysKeyIdRevokePost**](docs/KeysApi.md#appsAppIdKeysKeyIdRevokePost) | **POST** /apps/{app_id}/keys/{key_id}/revoke | Revokes a key
*ApiV1.KeysApi* | [**appsAppIdKeysPost**](docs/KeysApi.md#appsAppIdKeysPost) | **POST** /apps/{app_id}/keys | Creates a key
*ApiV1.NamespacesApi* | [**appsAppIdNamespacesGet**](docs/NamespacesApi.md#appsAppIdNamespacesGet) | **GET** /apps/{app_id}/namespaces | Lists namespaces
*ApiV1.NamespacesApi* | [**appsAppIdNamespacesNamespaceIdDelete**](docs/NamespacesApi.md#appsAppIdNamespacesNamespaceIdDelete) | **DELETE** /apps/{app_id}/namespaces/{namespace_id} | Deletes a namespace
*ApiV1.NamespacesApi* | [**appsAppIdNamespacesNamespaceIdPatch**](docs/NamespacesApi.md#appsAppIdNamespacesNamespaceIdPatch) | **PATCH** /apps/{app_id}/namespaces/{namespace_id} | Updates a namespace
*ApiV1.NamespacesApi* | [**appsAppIdNamespacesPost**](docs/NamespacesApi.md#appsAppIdNamespacesPost) | **POST** /apps/{app_id}/namespaces | Creates a namespace
*ApiV1.QueuesApi* | [**appsAppIdQueuesGet**](docs/QueuesApi.md#appsAppIdQueuesGet) | **GET** /apps/{app_id}/queues | Lists queues
*ApiV1.QueuesApi* | [**appsAppIdQueuesPost**](docs/QueuesApi.md#appsAppIdQueuesPost) | **POST** /apps/{app_id}/queues | Creates a queue
*ApiV1.QueuesApi* | [**appsAppIdQueuesQueueIdDelete**](docs/QueuesApi.md#appsAppIdQueuesQueueIdDelete) | **DELETE** /apps/{app_id}/queues/{queue_id} | Deletes a queue
*ApiV1.RulesApi* | [**appsAppIdRulesGet**](docs/RulesApi.md#appsAppIdRulesGet) | **GET** /apps/{app_id}/rules | Lists Integration rules
*ApiV1.RulesApi* | [**appsAppIdRulesPost**](docs/RulesApi.md#appsAppIdRulesPost) | **POST** /apps/{app_id}/rules | Creates a Integration Rule
*ApiV1.RulesApi* | [**appsAppIdRulesRuleIdDelete**](docs/RulesApi.md#appsAppIdRulesRuleIdDelete) | **DELETE** /apps/{app_id}/rules/{rule_id} | Deletes a Integration Rule
*ApiV1.RulesApi* | [**appsAppIdRulesRuleIdGet**](docs/RulesApi.md#appsAppIdRulesRuleIdGet) | **GET** /apps/{app_id}/rules/{rule_id} | Gets a Integration Rule by ID
*ApiV1.RulesApi* | [**appsAppIdRulesRuleIdPatch**](docs/RulesApi.md#appsAppIdRulesRuleIdPatch) | **PATCH** /apps/{app_id}/rules/{rule_id} | Updates a Integration Rule
*ApiV1.TokensApi* | [**meGet**](docs/TokensApi.md#meGet) | **GET** /me | Get token details


## Documentation for Models

 - [ApiV1.AmqpExternalRulePatch](docs/AmqpExternalRulePatch.md)
 - [ApiV1.AmqpExternalRulePatchTarget](docs/AmqpExternalRulePatchTarget.md)
 - [ApiV1.AmqpExternalRulePatchTargetHeadersInner](docs/AmqpExternalRulePatchTargetHeadersInner.md)
 - [ApiV1.AmqpExternalRulePost](docs/AmqpExternalRulePost.md)
 - [ApiV1.AmqpExternalRulePostTarget](docs/AmqpExternalRulePostTarget.md)
 - [ApiV1.AmqpExternalRuleResponse](docs/AmqpExternalRuleResponse.md)
 - [ApiV1.AmqpRulePatch](docs/AmqpRulePatch.md)
 - [ApiV1.AmqpRulePatchTarget](docs/AmqpRulePatchTarget.md)
 - [ApiV1.AmqpRulePost](docs/AmqpRulePost.md)
 - [ApiV1.AmqpRulePostTarget](docs/AmqpRulePostTarget.md)
 - [ApiV1.AmqpRuleResponse](docs/AmqpRuleResponse.md)
 - [ApiV1.AppPatch](docs/AppPatch.md)
 - [ApiV1.AppPost](docs/AppPost.md)
 - [ApiV1.AppResponse](docs/AppResponse.md)
 - [ApiV1.AwsAccessKeys](docs/AwsAccessKeys.md)
 - [ApiV1.AwsAccessKeysResponse](docs/AwsAccessKeysResponse.md)
 - [ApiV1.AwsAssumeRole](docs/AwsAssumeRole.md)
 - [ApiV1.AwsKinesisRulePatch](docs/AwsKinesisRulePatch.md)
 - [ApiV1.AwsKinesisRulePatchTarget](docs/AwsKinesisRulePatchTarget.md)
 - [ApiV1.AwsKinesisRulePatchTargetAuthentication](docs/AwsKinesisRulePatchTargetAuthentication.md)
 - [ApiV1.AwsKinesisRulePost](docs/AwsKinesisRulePost.md)
 - [ApiV1.AwsKinesisRulePostTarget](docs/AwsKinesisRulePostTarget.md)
 - [ApiV1.AwsKinesisRuleResponse](docs/AwsKinesisRuleResponse.md)
 - [ApiV1.AwsKinesisRuleResponseTarget](docs/AwsKinesisRuleResponseTarget.md)
 - [ApiV1.AwsKinesisRuleResponseTargetAuthentication](docs/AwsKinesisRuleResponseTargetAuthentication.md)
 - [ApiV1.AwsLambdaRulePatch](docs/AwsLambdaRulePatch.md)
 - [ApiV1.AwsLambdaRulePatchTarget](docs/AwsLambdaRulePatchTarget.md)
 - [ApiV1.AwsLambdaRulePost](docs/AwsLambdaRulePost.md)
 - [ApiV1.AwsLambdaRuleResponse](docs/AwsLambdaRuleResponse.md)
 - [ApiV1.AwsLambdaRuleResponseTarget](docs/AwsLambdaRuleResponseTarget.md)
 - [ApiV1.AwsSqsRulePatch](docs/AwsSqsRulePatch.md)
 - [ApiV1.AwsSqsRulePatchTarget](docs/AwsSqsRulePatchTarget.md)
 - [ApiV1.AwsSqsRulePost](docs/AwsSqsRulePost.md)
 - [ApiV1.AwsSqsRulePostTarget](docs/AwsSqsRulePostTarget.md)
 - [ApiV1.AwsSqsRuleResponse](docs/AwsSqsRuleResponse.md)
 - [ApiV1.AwsSqsRuleResponseTarget](docs/AwsSqsRuleResponseTarget.md)
 - [ApiV1.AzureFunctionRulePatch](docs/AzureFunctionRulePatch.md)
 - [ApiV1.AzureFunctionRulePatchTarget](docs/AzureFunctionRulePatchTarget.md)
 - [ApiV1.AzureFunctionRulePost](docs/AzureFunctionRulePost.md)
 - [ApiV1.AzureFunctionRulePostTarget](docs/AzureFunctionRulePostTarget.md)
 - [ApiV1.AzureFunctionRuleResponse](docs/AzureFunctionRuleResponse.md)
 - [ApiV1.CloudflareWorkerRulePatch](docs/CloudflareWorkerRulePatch.md)
 - [ApiV1.CloudflareWorkerRulePatchTarget](docs/CloudflareWorkerRulePatchTarget.md)
 - [ApiV1.CloudflareWorkerRulePost](docs/CloudflareWorkerRulePost.md)
 - [ApiV1.CloudflareWorkerRulePostTarget](docs/CloudflareWorkerRulePostTarget.md)
 - [ApiV1.CloudflareWorkerRuleResponse](docs/CloudflareWorkerRuleResponse.md)
 - [ApiV1.Error](docs/Error.md)
 - [ApiV1.GoogleCloudFunctionRulePatch](docs/GoogleCloudFunctionRulePatch.md)
 - [ApiV1.GoogleCloudFunctionRulePatchTarget](docs/GoogleCloudFunctionRulePatchTarget.md)
 - [ApiV1.GoogleCloudFunctionRulePost](docs/GoogleCloudFunctionRulePost.md)
 - [ApiV1.GoogleCloudFunctionRulePostTarget](docs/GoogleCloudFunctionRulePostTarget.md)
 - [ApiV1.GoogleCloudFunctionRuleResponse](docs/GoogleCloudFunctionRuleResponse.md)
 - [ApiV1.HttpRulePatch](docs/HttpRulePatch.md)
 - [ApiV1.HttpRulePatchTarget](docs/HttpRulePatchTarget.md)
 - [ApiV1.HttpRulePost](docs/HttpRulePost.md)
 - [ApiV1.HttpRulePostTarget](docs/HttpRulePostTarget.md)
 - [ApiV1.HttpRuleResponse](docs/HttpRuleResponse.md)
 - [ApiV1.IftttRulePatch](docs/IftttRulePatch.md)
 - [ApiV1.IftttRulePatchTarget](docs/IftttRulePatchTarget.md)
 - [ApiV1.IftttRulePost](docs/IftttRulePost.md)
 - [ApiV1.IftttRulePostTarget](docs/IftttRulePostTarget.md)
 - [ApiV1.IftttRuleResponse](docs/IftttRuleResponse.md)
 - [ApiV1.KafkaRulePatch](docs/KafkaRulePatch.md)
 - [ApiV1.KafkaRulePatchTarget](docs/KafkaRulePatchTarget.md)
 - [ApiV1.KafkaRulePatchTargetAuth](docs/KafkaRulePatchTargetAuth.md)
 - [ApiV1.KafkaRulePatchTargetAuthSasl](docs/KafkaRulePatchTargetAuthSasl.md)
 - [ApiV1.KafkaRulePost](docs/KafkaRulePost.md)
 - [ApiV1.KafkaRulePostTarget](docs/KafkaRulePostTarget.md)
 - [ApiV1.KafkaRuleResponse](docs/KafkaRuleResponse.md)
 - [ApiV1.KeyPatch](docs/KeyPatch.md)
 - [ApiV1.KeyPost](docs/KeyPost.md)
 - [ApiV1.KeyResponse](docs/KeyResponse.md)
 - [ApiV1.Me](docs/Me.md)
 - [ApiV1.MeAccount](docs/MeAccount.md)
 - [ApiV1.MeToken](docs/MeToken.md)
 - [ApiV1.MeUser](docs/MeUser.md)
 - [ApiV1.NamespacePatch](docs/NamespacePatch.md)
 - [ApiV1.NamespacePost](docs/NamespacePost.md)
 - [ApiV1.NamespaceResponse](docs/NamespaceResponse.md)
 - [ApiV1.PulsarRulePatch](docs/PulsarRulePatch.md)
 - [ApiV1.PulsarRulePatchTarget](docs/PulsarRulePatchTarget.md)
 - [ApiV1.PulsarRulePatchTargetAuthentication](docs/PulsarRulePatchTargetAuthentication.md)
 - [ApiV1.PulsarRulePost](docs/PulsarRulePost.md)
 - [ApiV1.PulsarRulePostTarget](docs/PulsarRulePostTarget.md)
 - [ApiV1.PulsarRuleResponse](docs/PulsarRuleResponse.md)
 - [ApiV1.PulsarTokenAuth](docs/PulsarTokenAuth.md)
 - [ApiV1.Queue](docs/Queue.md)
 - [ApiV1.QueueResponse](docs/QueueResponse.md)
 - [ApiV1.QueueResponseAmqp](docs/QueueResponseAmqp.md)
 - [ApiV1.QueueResponseMessages](docs/QueueResponseMessages.md)
 - [ApiV1.QueueResponseStats](docs/QueueResponseStats.md)
 - [ApiV1.QueueResponseStomp](docs/QueueResponseStomp.md)
 - [ApiV1.RulePatch](docs/RulePatch.md)
 - [ApiV1.RulePost](docs/RulePost.md)
 - [ApiV1.RuleResponse](docs/RuleResponse.md)
 - [ApiV1.RuleSource](docs/RuleSource.md)
 - [ApiV1.RuleSourcePatch](docs/RuleSourcePatch.md)
 - [ApiV1.UnsupportedRuleResponse](docs/UnsupportedRuleResponse.md)
 - [ApiV1.UnsupportedRuleResponseTarget](docs/UnsupportedRuleResponseTarget.md)
 - [ApiV1.ZapierRulePatch](docs/ZapierRulePatch.md)
 - [ApiV1.ZapierRulePost](docs/ZapierRulePost.md)
 - [ApiV1.ZapierRuleResponse](docs/ZapierRuleResponse.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### bearer_auth

- **Type**: Bearer authentication

