APIs/ably.net/control/1.0.14/javascript-client/README.md
# control_api_v1

ControlApiV1 - JavaScript client for control_api_v1
Use the Control API to manage your applications, namespaces, keys, queues, rules, and more.

Detailed information on using this API can be found in the Ably <a href=\"https://ably.com/documentation/control-api\">developer documentation</a>.

Control API is currently in Beta.

This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.0.14
- Package version: 1.0.14
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install control_api_v1 --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your control_api_v1 from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var ControlApiV1 = require('control_api_v1');

var defaultClient = ControlApiV1.ApiClient.instance;
// Configure Bearer access token for authorization: bearer_auth
var bearer_auth = defaultClient.authentications['bearer_auth'];
bearer_auth.accessToken = "YOUR ACCESS TOKEN"

var api = new ControlApiV1.AppsApi()
var accountId = "accountId_example"; // {String} The account ID for which to retrieve the associated applications.
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.accountsAccountIdAppsGet(accountId, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://control.ably.net/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ControlApiV1.AppsApi* | [**accountsAccountIdAppsGet**](docs/AppsApi.md#accountsAccountIdAppsGet) | **GET** /accounts/{account_id}/apps | Lists apps
*ControlApiV1.AppsApi* | [**accountsAccountIdAppsPost**](docs/AppsApi.md#accountsAccountIdAppsPost) | **POST** /accounts/{account_id}/apps | Creates an app
*ControlApiV1.AppsApi* | [**appsIdDelete**](docs/AppsApi.md#appsIdDelete) | **DELETE** /apps/{id} | Deletes an app
*ControlApiV1.AppsApi* | [**appsIdPatch**](docs/AppsApi.md#appsIdPatch) | **PATCH** /apps/{id} | Updates an app
*ControlApiV1.AppsApi* | [**appsIdPkcs12Post**](docs/AppsApi.md#appsIdPkcs12Post) | **POST** /apps/{id}/pkcs12 | Updates app&#39;s APNs info from a &#x60;.p12&#x60; file
*ControlApiV1.KeysApi* | [**appsAppIdKeysGet**](docs/KeysApi.md#appsAppIdKeysGet) | **GET** /apps/{app_id}/keys | Lists app keys
*ControlApiV1.KeysApi* | [**appsAppIdKeysKeyIdPatch**](docs/KeysApi.md#appsAppIdKeysKeyIdPatch) | **PATCH** /apps/{app_id}/keys/{key_id} | Updates a key
*ControlApiV1.KeysApi* | [**appsAppIdKeysKeyIdRevokePost**](docs/KeysApi.md#appsAppIdKeysKeyIdRevokePost) | **POST** /apps/{app_id}/keys/{key_id}/revoke | Revokes a key
*ControlApiV1.KeysApi* | [**appsAppIdKeysPost**](docs/KeysApi.md#appsAppIdKeysPost) | **POST** /apps/{app_id}/keys | Creates a key
*ControlApiV1.NamespacesApi* | [**appsAppIdNamespacesGet**](docs/NamespacesApi.md#appsAppIdNamespacesGet) | **GET** /apps/{app_id}/namespaces | Lists namespaces
*ControlApiV1.NamespacesApi* | [**appsAppIdNamespacesNamespaceIdDelete**](docs/NamespacesApi.md#appsAppIdNamespacesNamespaceIdDelete) | **DELETE** /apps/{app_id}/namespaces/{namespace_id} | Deletes a namespace
*ControlApiV1.NamespacesApi* | [**appsAppIdNamespacesNamespaceIdPatch**](docs/NamespacesApi.md#appsAppIdNamespacesNamespaceIdPatch) | **PATCH** /apps/{app_id}/namespaces/{namespace_id} | Updates a namespace
*ControlApiV1.NamespacesApi* | [**appsAppIdNamespacesPost**](docs/NamespacesApi.md#appsAppIdNamespacesPost) | **POST** /apps/{app_id}/namespaces | Creates a namespace
*ControlApiV1.QueuesApi* | [**appsAppIdQueuesGet**](docs/QueuesApi.md#appsAppIdQueuesGet) | **GET** /apps/{app_id}/queues | Lists queues
*ControlApiV1.QueuesApi* | [**appsAppIdQueuesPost**](docs/QueuesApi.md#appsAppIdQueuesPost) | **POST** /apps/{app_id}/queues | Creates a queue
*ControlApiV1.QueuesApi* | [**appsAppIdQueuesQueueIdDelete**](docs/QueuesApi.md#appsAppIdQueuesQueueIdDelete) | **DELETE** /apps/{app_id}/queues/{queue_id} | Deletes a queue
*ControlApiV1.RulesApi* | [**appsAppIdRulesGet**](docs/RulesApi.md#appsAppIdRulesGet) | **GET** /apps/{app_id}/rules | Lists Reactor rules
*ControlApiV1.RulesApi* | [**appsAppIdRulesPost**](docs/RulesApi.md#appsAppIdRulesPost) | **POST** /apps/{app_id}/rules | Creates a Reactor rule
*ControlApiV1.RulesApi* | [**appsAppIdRulesRuleIdDelete**](docs/RulesApi.md#appsAppIdRulesRuleIdDelete) | **DELETE** /apps/{app_id}/rules/{rule_id} | Deletes a Reactor rule
*ControlApiV1.RulesApi* | [**appsAppIdRulesRuleIdGet**](docs/RulesApi.md#appsAppIdRulesRuleIdGet) | **GET** /apps/{app_id}/rules/{rule_id} | Gets a reactor rule by rule ID
*ControlApiV1.RulesApi* | [**appsAppIdRulesRuleIdPatch**](docs/RulesApi.md#appsAppIdRulesRuleIdPatch) | **PATCH** /apps/{app_id}/rules/{rule_id} | Updates a Reactor rule
*ControlApiV1.TokensApi* | [**meGet**](docs/TokensApi.md#meGet) | **GET** /me | Get token details


## Documentation for Models

 - [ControlApiV1.AmqpExternalRulePatch](docs/AmqpExternalRulePatch.md)
 - [ControlApiV1.AmqpExternalRulePatchTarget](docs/AmqpExternalRulePatchTarget.md)
 - [ControlApiV1.AmqpExternalRulePatchTargetHeadersInner](docs/AmqpExternalRulePatchTargetHeadersInner.md)
 - [ControlApiV1.AmqpExternalRulePost](docs/AmqpExternalRulePost.md)
 - [ControlApiV1.AmqpExternalRulePostTarget](docs/AmqpExternalRulePostTarget.md)
 - [ControlApiV1.AmqpExternalRuleResponse](docs/AmqpExternalRuleResponse.md)
 - [ControlApiV1.AmqpRulePatch](docs/AmqpRulePatch.md)
 - [ControlApiV1.AmqpRulePatchTarget](docs/AmqpRulePatchTarget.md)
 - [ControlApiV1.AmqpRulePost](docs/AmqpRulePost.md)
 - [ControlApiV1.AmqpRulePostTarget](docs/AmqpRulePostTarget.md)
 - [ControlApiV1.AmqpRuleResponse](docs/AmqpRuleResponse.md)
 - [ControlApiV1.AppPatch](docs/AppPatch.md)
 - [ControlApiV1.AppPost](docs/AppPost.md)
 - [ControlApiV1.AppResponse](docs/AppResponse.md)
 - [ControlApiV1.AwsAccessKeys](docs/AwsAccessKeys.md)
 - [ControlApiV1.AwsAccessKeysResponse](docs/AwsAccessKeysResponse.md)
 - [ControlApiV1.AwsAssumeRole](docs/AwsAssumeRole.md)
 - [ControlApiV1.AwsKinesisRulePatch](docs/AwsKinesisRulePatch.md)
 - [ControlApiV1.AwsKinesisRulePatchTarget](docs/AwsKinesisRulePatchTarget.md)
 - [ControlApiV1.AwsKinesisRulePatchTargetAuthentication](docs/AwsKinesisRulePatchTargetAuthentication.md)
 - [ControlApiV1.AwsKinesisRulePost](docs/AwsKinesisRulePost.md)
 - [ControlApiV1.AwsKinesisRulePostTarget](docs/AwsKinesisRulePostTarget.md)
 - [ControlApiV1.AwsKinesisRuleResponse](docs/AwsKinesisRuleResponse.md)
 - [ControlApiV1.AwsKinesisRuleResponseTarget](docs/AwsKinesisRuleResponseTarget.md)
 - [ControlApiV1.AwsKinesisRuleResponseTargetAuthentication](docs/AwsKinesisRuleResponseTargetAuthentication.md)
 - [ControlApiV1.AwsLambdaRulePatch](docs/AwsLambdaRulePatch.md)
 - [ControlApiV1.AwsLambdaRulePatchTarget](docs/AwsLambdaRulePatchTarget.md)
 - [ControlApiV1.AwsLambdaRulePost](docs/AwsLambdaRulePost.md)
 - [ControlApiV1.AwsLambdaRuleResponse](docs/AwsLambdaRuleResponse.md)
 - [ControlApiV1.AwsLambdaRuleResponseTarget](docs/AwsLambdaRuleResponseTarget.md)
 - [ControlApiV1.AwsSqsRulePatch](docs/AwsSqsRulePatch.md)
 - [ControlApiV1.AwsSqsRulePatchTarget](docs/AwsSqsRulePatchTarget.md)
 - [ControlApiV1.AwsSqsRulePost](docs/AwsSqsRulePost.md)
 - [ControlApiV1.AwsSqsRulePostTarget](docs/AwsSqsRulePostTarget.md)
 - [ControlApiV1.AwsSqsRuleResponse](docs/AwsSqsRuleResponse.md)
 - [ControlApiV1.AwsSqsRuleResponseTarget](docs/AwsSqsRuleResponseTarget.md)
 - [ControlApiV1.AzureFunctionRulePatch](docs/AzureFunctionRulePatch.md)
 - [ControlApiV1.AzureFunctionRulePatchTarget](docs/AzureFunctionRulePatchTarget.md)
 - [ControlApiV1.AzureFunctionRulePost](docs/AzureFunctionRulePost.md)
 - [ControlApiV1.AzureFunctionRulePostTarget](docs/AzureFunctionRulePostTarget.md)
 - [ControlApiV1.AzureFunctionRuleResponse](docs/AzureFunctionRuleResponse.md)
 - [ControlApiV1.CloudflareWorkerRulePatch](docs/CloudflareWorkerRulePatch.md)
 - [ControlApiV1.CloudflareWorkerRulePatchTarget](docs/CloudflareWorkerRulePatchTarget.md)
 - [ControlApiV1.CloudflareWorkerRulePost](docs/CloudflareWorkerRulePost.md)
 - [ControlApiV1.CloudflareWorkerRulePostTarget](docs/CloudflareWorkerRulePostTarget.md)
 - [ControlApiV1.CloudflareWorkerRuleResponse](docs/CloudflareWorkerRuleResponse.md)
 - [ControlApiV1.Error](docs/Error.md)
 - [ControlApiV1.GoogleCloudFunctionRulePatch](docs/GoogleCloudFunctionRulePatch.md)
 - [ControlApiV1.GoogleCloudFunctionRulePatchTarget](docs/GoogleCloudFunctionRulePatchTarget.md)
 - [ControlApiV1.GoogleCloudFunctionRulePost](docs/GoogleCloudFunctionRulePost.md)
 - [ControlApiV1.GoogleCloudFunctionRulePostTarget](docs/GoogleCloudFunctionRulePostTarget.md)
 - [ControlApiV1.GoogleCloudFunctionRuleResponse](docs/GoogleCloudFunctionRuleResponse.md)
 - [ControlApiV1.HttpRulePatch](docs/HttpRulePatch.md)
 - [ControlApiV1.HttpRulePatchTarget](docs/HttpRulePatchTarget.md)
 - [ControlApiV1.HttpRulePost](docs/HttpRulePost.md)
 - [ControlApiV1.HttpRulePostTarget](docs/HttpRulePostTarget.md)
 - [ControlApiV1.HttpRuleResponse](docs/HttpRuleResponse.md)
 - [ControlApiV1.HttpRuleResponseTarget](docs/HttpRuleResponseTarget.md)
 - [ControlApiV1.IftttRulePost](docs/IftttRulePost.md)
 - [ControlApiV1.IftttRulePostTarget](docs/IftttRulePostTarget.md)
 - [ControlApiV1.IftttRuleResponse](docs/IftttRuleResponse.md)
 - [ControlApiV1.KeyPatch](docs/KeyPatch.md)
 - [ControlApiV1.KeyPost](docs/KeyPost.md)
 - [ControlApiV1.KeyResponse](docs/KeyResponse.md)
 - [ControlApiV1.Me](docs/Me.md)
 - [ControlApiV1.MeAccount](docs/MeAccount.md)
 - [ControlApiV1.MeToken](docs/MeToken.md)
 - [ControlApiV1.MeUser](docs/MeUser.md)
 - [ControlApiV1.NamespacePatch](docs/NamespacePatch.md)
 - [ControlApiV1.NamespacePost](docs/NamespacePost.md)
 - [ControlApiV1.NamespaceResponse](docs/NamespaceResponse.md)
 - [ControlApiV1.Queue](docs/Queue.md)
 - [ControlApiV1.QueueResponse](docs/QueueResponse.md)
 - [ControlApiV1.QueueResponseAmqp](docs/QueueResponseAmqp.md)
 - [ControlApiV1.QueueResponseMessages](docs/QueueResponseMessages.md)
 - [ControlApiV1.QueueResponseStats](docs/QueueResponseStats.md)
 - [ControlApiV1.QueueResponseStomp](docs/QueueResponseStomp.md)
 - [ControlApiV1.RuleAttributes](docs/RuleAttributes.md)
 - [ControlApiV1.RulePatch](docs/RulePatch.md)
 - [ControlApiV1.RulePost](docs/RulePost.md)
 - [ControlApiV1.RuleResponse](docs/RuleResponse.md)
 - [ControlApiV1.RuleSource](docs/RuleSource.md)
 - [ControlApiV1.RuleSourcePatch](docs/RuleSourcePatch.md)
 - [ControlApiV1.UnsupportedRuleResponse](docs/UnsupportedRuleResponse.md)
 - [ControlApiV1.UnsupportedRuleResponseTarget](docs/UnsupportedRuleResponseTarget.md)
 - [ControlApiV1.ZapierRulePatch](docs/ZapierRulePatch.md)
 - [ControlApiV1.ZapierRulePost](docs/ZapierRulePost.md)
 - [ControlApiV1.ZapierRuleResponse](docs/ZapierRuleResponse.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### bearer_auth

- **Type**: Bearer authentication

